k8s/photography/photography-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photography
  namespace: hallphotography
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photography
  template:
    metadata:
      labels:
        app: photography
    spec:
      containers:
      - name: photography
        image: stefanmhall/photography:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: server-crt
          mountPath: /root/server.crt
          subPath: server.crt
          readOnly: true
        - name: server-key
          mountPath: /root/server.key
          subPath: server.key
          readOnly: true
        - name: calendar-token
          mountPath: /root/calendar/token.json
          subPath: calendar-token.json
          readOnly: true
        - name: token
          mountPath: /root/token.json
          subPath: token.json
          readOnly: true
        - name: dns-config
          mountPath: /etc/resolv.conf
          subPath: resolv.conf
          readOnly: true
        - name: uploads
          mountPath: /app/uploads
        - name: downloads
          mountPath: /app/downloads
      volumes:
      - name: server-crt
        secret:
          secretName: tls-certs
          items:
          - key: server.crt
            path: server.crt
      - name: server-key
        secret:
          secretName: tls-certs
          items:
          - key: server.key
            path: server.key
      - name: calendar-token
        secret:
          secretName: calendar-secrets
          items:
          - key: calendar-token.json
            path: calendar-token.json
      - name: token
        secret:
          secretName: calendar-secrets
          items:
          - key: token.json
            path: token.json
      - name: dns-config
        configMap:
          name: dns-config
          items:
          - key: resolv.conf
            path: resolv.conf
      - name: uploads
        persistentVolumeClaim:
          claimName: photography-uploads
      - name: downloads
        persistentVolumeClaim:
          claimName: photography-downloads
