k8s/photography/photography-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photography
  namespace: hallphotography
spec:
  selector:
    app: photography
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31055
  type: NodePort
