k8s/photography/photography-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photography-ingress
  namespace: hallphotography
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serversTransport: kube-system-insecure-transport@kubernetescrd
spec:
  rules:
  - host: photography.stefan-sre.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photography
            port:
              number: 8080
